@@ -8,7 +8,7 @@ char *raw_message = "From: \"Brother from another planet\" <vol@inter7.com>\n"
 	"To: \"Brother from another planet\" <vol@inter7.com>\n"
 	"Reply-to: \"Brother from another planet\" <vol@inter7.com>\n"
 	"Cc: \"Brother from another planet\" <vol@inter7.com>,\n"
-	" \"SpongeBob\" <nobody@test123.com>\n"
+	" \"SpongeBob O'Brien\" <nobody@test123.com>\n"
 	"Subject: multipart/mixed\n"
 	"Date: Wed, 11 May 2005 13:20:08 -0700\n"
 	"Received: at mx.inter7.com from localhost\n"
@@ -55,7 +55,7 @@ char *raw_lmtp_data = "From: \"Brother from another planet\" <vol@inter7.com>\r\
 	"Subject: multipart/mixed\r\n"
 	"Reply-to: \"Brother from another planet\" <vol@inter7.com>\r\n"
 	"Cc: \"Brother from another planet\" <vol@inter7.com>,\r\n"
-	" \"SpongeBob\" <nobody@test123.com>\r\n"
+	" \"SpongeBob O'Brien\" <nobody@test123.com>\r\n"
 	"Date: Wed, 11 May 2005 13:20:08 -0700\n"
 	"Received: at mx.inter7.com from localhost\r\n"
 	"Received: at localhost from localhost\r\n"
