@@ -1,3 +1,7 @@
+2005-06-23  Paul Stevens <paul@nfg.nl>
+
+	* dbmail-message.c: escape strings during insertion (closes: #222).
+
 2005-06-21  Paul Stevens <paul@nfg.nl>
 
 	* db.c, pgsql/dbpgsql.c, server.c, mysql/dbmysql.c: minor cleanups. 
